--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,18 +1,24 @@
 version: '3'
 services:
   website:
-    container_name: website
     build:
       context: ./website
       dockerfile: Dockerfile
+      cache_from:
+        - '${WEBSITE_IMAGE}'
+    image: '${WEBSITE_IMAGE}'
+    ports:
+      - '3000:3000'
     volumes:
-      - website:/website/build/ # build files will be added at this directory !!!
+      - website:./website/build/ # build files will be added at this directory !!!
 
   nginx:
-    container_name: nginx
     build:
       context: ./nginx
       dockerfile: Dockerfile
+      cache_from:
+        - '${NGINX_IMAGE}'
+    image: '${NGINX_IMAGE}'
     ports:
       - '80:80'
     volumes:
