--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,18 +1,16 @@
 version: '3'
 services:
   website:
-    container_name: website
-    build:
-      context: ./website
-      dockerfile: Dockerfile
+    container_name: 'website'
+    image: '${WEBSITE_IMAGE}'
+    ports:
+      - '3000:3000'
     volumes:
       - website:/website/build/ # build files will be added at this directory !!!
 
   nginx:
-    container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    container_name: 'nginx'
+    image: '${NGINX_IMAGE}'
     ports:
       - '80:80'
     volumes:
