--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,24 +24,24 @@ jobs:
           echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
           echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
-#       - name: Log in to GitHub Packages
-#         env:
-#           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-#         run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{ secrets.NAMESPACE }} --password-stdin
+      - name: Log in to GitHub Packages
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{ secrets.NAMESPACE }} --password-stdin
 
-#       - name: Pull images
-#         run: |
-#           docker pull ${{ env.WEBSITE_IMAGE }} || true
-#           docker pull ${{ env.NGINX_IMAGE }} || true
+      - name: Pull images
+        run: |
+          docker pull ${{ env.WEBSITE_IMAGE }} || true
+          docker pull ${{ env.NGINX_IMAGE }} || true
 
-#       - name: Build images
-#         run: |
-#           docker-compose -f docker-compose.ci.yml build
+      - name: Build images
+        run: |
+          docker-compose -f docker-compose.ci.yml build
 
-#       - name: Push images
-#         run: |
-#           docker push ${{ env.WEBSITE_IMAGE }}
-#           docker push ${{ env.NGINX_IMAGE }}
+      - name: Push images
+        run: |
+          docker push ${{ env.WEBSITE_IMAGE }}
+          docker push ${{ env.NGINX_IMAGE }}
 
 #   checking-secrets:
 #     name: Checking secrets
