--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Log in to GitHub Packages
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login -u datdnt1027 --password-stdin ${PERSONAL_ACCESS_TOKEN}
+        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login -u datdnt1027 --password-stdin ${PERSONAL_ACCESS_TOKEN} ghcr.io
 
       - name: Pull images
         run: |
