--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,7 @@ jobs:
           echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
       - name: Log in to GitHub Packages
-        env:
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login -u datdnt1027 --password-stdin ${PERSONAL_ACCESS_TOKEN} ghcr.io
+        run:  docker login --username datdnt1027 --password-stdin ${{secrets.PERSONAL_ACCESS_TOKEN}} ghcr.io
 
       - name: Pull images
         run: |
