--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,14 +80,14 @@ jobs:
           echo NAMESPACE=${{ secrets.NAMESPACE }} >> .env
           echo PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }} >> .env
 
-      - name: Add the private SSH key to the ssh-agent
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: |
-          mkdir -p ~/.ssh
-          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          ssh-add - <<< "${{ secrets.PRIVATE_KEY }}"
+    #   - name: Add the private SSH key to the ssh-agent
+    #     env:
+    #       SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+    #     run: |
+    #       mkdir -p ~/.ssh
+    #       ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+    #       ssh-keyscan github.com >> ~/.ssh/known_hosts
+    #       ssh-add - <<< "${{ secrets.PRIVATE_KEY }}"
 
       - name: Deploy images on AWS EC2
         env:
