--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,26 +80,17 @@ jobs:
           echo NAMESPACE=${{ secrets.NAMESPACE }} >> .env
           echo PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }} >> .env
 
-    #   - name: Add the private SSH key to the ssh-agent
-    #     env:
-    #       SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-    #     run: |
-    #       mkdir -p ~/.ssh
-    #       ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-    #       ssh-keyscan github.com >> ~/.ssh/known_hosts
-    #       ssh-add - <<< "${{ secrets.PRIVATE_KEY }}"
 
       - name: Deploy images on AWS EC2
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-
-        run: |
-          scp -o StrictHostKeyChecking=no -r ./.env ./docker-compose.prod.yml ${{secrets.AWS_HOST_USER}}@${{ secrets.AWS_EC2_IP_ADDRESS }}:
-          ssh -o StrictHostKeyChecking=no ${{secrets.AWS_HOST_USER}}@${{ secrets.AWS_EC2_IP_ADDRESS }} << EOF
-              docker-compose down --rmi all -v
-              docker login ghcr.io -u ${{secrets.NAMESPACE}} -p ${{secrets.PERSONAL_ACCESS_TOKEN}}
-              docker pull $WEBSITE_IMAGE
-              docker pull $NGINX_IMAGE 
-              docker-compose --env-file=.env -f docker-compose.prod.yml up -d
-              docker logout
-          EOF
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.AWS_EC2_IP_ADDRESS }}
+            username: ${{ secrets.AWS_HOST_USER }}
+            key: ${{ secrets.PRIVATE_KEY }}
+            script: |
+                docker-compose down --rmi all -v
+                docker login ghcr.io -u ${{secrets.NAMESPACE}} -p ${{secrets.PERSONAL_ACCESS_TOKEN}}
+                docker pull $WEBSITE_IMAGE
+                docker pull $NGINX_IMAGE 
+                docker-compose --env-file=.env -f docker-compose.prod.yml up -d
+                docker logout
