--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,13 +82,15 @@ jobs:
 
       - name: Deploy images on AWS EC2
         uses: appleboy/ssh-action@master
+        env:
+            PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
             host: ${{ secrets.AWS_EC2_IP_ADDRESS }}
             username: ${{ secrets.AWS_HOST_USER }}
             key: ${{ secrets.PRIVATE_KEY }}
             script: |
                 docker-compose down --rmi all -v
-                docker login ghcr.io -u ${{secrets.NAMESPACE}} -p ${{secrets.PERSONAL_ACCESS_TOKEN}}
+                echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{secrets.NAMESPACE}} --password-stdin
                 docker pull $WEBSITE_IMAGE
                 docker pull $NGINX_IMAGE 
                 docker-compose --env-file=.env -f docker-compose.prod.yml up -d
