--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,15 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v3
 
+      - name: Display GitHub repository
+        run: | 
+            echo "GitHub Repository: $GITHUB_REPOSITORY"
+  
+      - name: Log in to GitHub Packages
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{secrets.NAMESPACE}} --password-stdin
+
       - name: Add environment variables to .env
         run: |
           echo WEBSITE_IMAGE=${{ env.WEBSITE_IMAGE }} >> .env
