--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,64 +11,64 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  build:
-    name: Build the Docker Image
-    runs-on: ubuntu-latest
+#   build:
+#     name: Build the Docker Image
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: checkout main
-        uses: actions/checkout@v3
+#     steps:
+#       - name: checkout main
+#         uses: actions/checkout@v3
 
-      - name: Display GitHub repository
-        run: | 
-            echo "GitHub Repository: $GITHUB_REPOSITORY"
+#       - name: Display GitHub repository
+#         run: | 
+#             echo "GitHub Repository: $GITHUB_REPOSITORY"
 
-      - name: Log in to GitHub Packages
-        env:
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{secrets.NAMESPACE}} --password-stdin
+#       - name: Log in to GitHub Packages
+#         env:
+#           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+#         run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{secrets.NAMESPACE}} --password-stdin
 
-      - name: Set environment variables to .env
-        run: |
-          echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
-          echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
+#       - name: Set environment variables to .env
+#         run: |
+#           echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
+#           echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
-      - name: Pull images
-        run: |
-          docker pull ${{ env.WEBSITE_IMAGE }} || true
-          docker pull ${{ env.NGINX_IMAGE }} || true
+#       - name: Pull images
+#         run: |
+#           docker pull ${{ env.WEBSITE_IMAGE }} || true
+#           docker pull ${{ env.NGINX_IMAGE }} || true
 
-      - name: Build images
-        run: |
-          docker-compose -f docker-compose.ci.yml build
+#       - name: Build images
+#         run: |
+#           docker-compose -f docker-compose.ci.yml build
 
-      - name: Push images
-        run: |
-          docker push ${{ env.WEBSITE_IMAGE }}
-          docker push ${{ env.NGINX_IMAGE }}
+#       - name: Push images
+#         run: |
+#           docker push ${{ env.WEBSITE_IMAGE }}
+#           docker push ${{ env.NGINX_IMAGE }}
 
-  checking-secrets:
-    name: Checking secrets
-    runs-on: ubuntu-latest
-    needs: build
-    outputs:
-      secret_key_exists: ${{steps.check_secrets.outputs.defined}}
-    steps:
-      - name: Check for Secrets availabilities
-        id: check_secrets
-        shell: bash
-        run: |
-          if [[ -n "${{ secrets.PRIVATE_KEY }}" && -n "${{secrets.AWS_EC2_IP_ADDRESS}}" && -n "${{secrets.AWS_HOST_USER}}" ]]; then
-            echo "defined=true" >> $GITHUB_OUTPUT;
-          else
-            echo "defined=false" >> $GITHUB_OUTPUT;
-          fi
+#   checking-secrets:
+#     name: Checking secrets
+#     runs-on: ubuntu-latest
+#     needs: build
+#     outputs:
+#       secret_key_exists: ${{steps.check_secrets.outputs.defined}}
+#     steps:
+#       - name: Check for Secrets availabilities
+#         id: check_secrets
+#         shell: bash
+#         run: |
+#           if [[ -n "${{ secrets.PRIVATE_KEY }}" && -n "${{secrets.AWS_EC2_IP_ADDRESS}}" && -n "${{secrets.AWS_HOST_USER}}" ]]; then
+#             echo "defined=true" >> $GITHUB_OUTPUT;
+#           else
+#             echo "defined=false" >> $GITHUB_OUTPUT;
+#           fi
 
   deploy:
     name: Deploy to AWS EC2
     runs-on: ubuntu-latest
-    needs: checking-secrets
-    if: needs.checking-secrets.outputs.secret_key_exists == 'true'
+    # needs: checking-secrets
+    # if: needs.checking-secrets.outputs.secret_key_exists == 'true'
     steps:
       - name: Checkout main
         uses: actions/checkout@v3
@@ -84,10 +84,8 @@ jobs:
 
       - name: Add environment variables to .env
         run: |
-          echo WEBSITE_IMAGE=${{ env.WEBSITE_IMAGE }} >> .env
-          echo NGINX_IMAGE=${{ env.NGINX_IMAGE }} >> .env
-          echo NAMESPACE=${{ secrets.NAMESPACE }} >> .env
-          echo PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }} >> .env
+          echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
+          echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
       - name: Deploy images on AWS EC2
         uses: appleboy/ssh-action@master
