--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,41 +11,44 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-#   build:
-    # name: Build the Docker Image
-    # runs-on: ubuntu-latest
+  build:
+    name: Build the Docker Image
+    runs-on: ubuntu-latest
 
-    # steps:
-    #   - name: checkout main
-    #     uses: actions/checkout@v3
+    steps:
+      - name: checkout main
+        uses: actions/checkout@v3
 
-    #   - name: Set environment variables to .env
-    #     run: |
-    #       echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
-    #       echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
+      - name: Set environment variables to .env
+        run: |
+          echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
+          echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
-    #   - name: Log in to GitHub Packages
-    #     env:
-    #       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-    #     run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{ secrets.NAMESPACE }} --password-stdin
+      - name: Log in to GitHub Packages
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: echo ${PERSONAL_ACCESS_TOKEN} | docker login ghcr.io -u ${{ secrets.NAMESPACE }} --password-stdin
 
-    #   - name: Pull images
-    #     run: |
-    #       docker pull ${{ env.WEBSITE_IMAGE }} || true
-    #       docker pull ${{ env.NGINX_IMAGE }} || true
+      - name: Pull images
+        run: |
+          docker pull ${{ env.WEBSITE_IMAGE }} || true
+          docker pull ${{ env.NGINX_IMAGE }} || true
 
-    #   - name: Build images
-    #     run: |
-    #       docker-compose -f docker-compose.ci.yml build
+      - name: Build images
+        run: |
+          docker-compose -f docker-compose.ci.yml build
 
-    #   - name: Push images
-    #     run: |
-    #       docker push ${{ env.WEBSITE_IMAGE }}
-    #       docker push ${{ env.NGINX_IMAGE }}
+      - name: Push images
+        run: |
+          docker push ${{ env.WEBSITE_IMAGE }}
+          docker push ${{ env.NGINX_IMAGE }}
 
   checking-secrets:
     name: Checking secrets
     runs-on: ubuntu-latest
+    needs: build
+    outputs:
+      secret_key_exists: ${{steps.check_secrets.outputs.defined}}
     steps:
       - name: Check for Secrets availabilities
         id: check_secrets
@@ -61,7 +64,7 @@ jobs:
     name: Deploy to AWS EC2
     runs-on: ubuntu-latest
     needs: checking-secrets
-    # if: needs.checking-secrets.outputs.secret_key_exists == 'true'
+    if: needs.checking-secrets.outputs.secret_key_exists == 'true'
     steps:
       - name: Checkout main
         uses: actions/checkout@v3
