--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 env:
   #
   WEBSITE_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')/website
+  NGINX_IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')/nginx
   REGISTRY: ghcr.io
 
 jobs:
@@ -21,6 +22,7 @@ jobs:
       - name: Set environment variables to .env
         run: |
           echo "WEBSITE_IMAGE=$(echo ${{env.WEBSITE_IMAGE}} )" >> $GITHUB_ENV
+          echo "NGINX_IMAGE=$(echo ${{env.NGINX_IMAGE}} )" >> $GITHUB_ENV
 
       - name: Log in to GitHub Packages
         env:
@@ -30,6 +32,7 @@ jobs:
       - name: Pull images
         run: |
           docker pull ${{ env.WEBSITE_IMAGE }} || true
+          docker pull ${{ env.NGINX_IMAGE }} || true
 
       - name: Build images
         run: |
@@ -38,6 +41,7 @@ jobs:
       - name: Push images
         run: |
           docker push ${{ env.WEBSITE_IMAGE }}
+          docker push ${{ env.NGINX_IMAGE }}
 
   checking-secrets:
     name: Checking secrets
@@ -68,6 +72,7 @@ jobs:
       - name: Add environment variables to .env
         run: |
           echo WEBSITE_IMAGE=${{ env.WEBSITE_IMAGE }} >> .env
+          echo NGINX_IMAGE=${{ env.NGINX_IMAGE }} >> .env
           echo NAMESPACE=${{ secrets.NAMESPACE }} >> .env
           echo PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }} >> .env
 
@@ -90,6 +95,7 @@ jobs:
               docker-compose down --rmi all -v
               docker login ghcr.io -u ${{secrets.NAMESPACE}} -p ${{secrets.PERSONAL_ACCESS_TOKEN}}
               docker pull $WEBSITE_IMAGE
+              docker pull $NGINX_IMAGE 
               docker-compose --env-file=.env -f docker-compose.prod.yml up -d
               docker logout
           EOF
