--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
 version: '3'
 services:
   website:
+    container_name: website
     build:
       context: ./website
       dockerfile: Dockerfile
-    command: npm start
+    volumes:
+      - website:/website/build/ # build files will be added at this directory !!!
+
+  nginx:
+    container_name: nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - '8080:8080'
+    volumes:
+      - website:/usr/share/nginx/html/website # Copy React App's build files to the Nginx directory
+
+volumes:
+  website:
