--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - website:/website/build/ # build files will be added at this directory !!!
+      - website:/website/build/
 
   nginx:
     container_name: 'nginx'
@@ -14,7 +14,8 @@ services:
     ports:
       - '8080:8080'
     volumes:
-      - website:/usr/share/nginx/html/website # Copy React App's build files to the Nginx directory
+      - website:/usr/share/nginx/html/website
+    restart: always  # Add this line to specify the restart policy
 
 volumes:
   website:
